maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:28: error: type mismatch;
 found   : Unit
 required: Boolean
    rep=true
       ^Escaper:27: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estFaceMur()){
  ^